# superpixel-benchmark

./: .gitignore  LICENSE.md  README.md  make.sh
Scripts/Evaluation/: add_noise.py  eval_connectivity.ipynb  eval_mean.ipynb  eval_robustness.ipynb  eval_stability.ipynb  eval_stability.py  eval_time.ipynb  graphs_robustness.ipynb  qualitative_eval.sh  qualitative_eval_manual.sh  run_enforceConnectivity.sh  run_eval.sh  run_eval_manual.sh  run_eval_manual_enforceConnectivity.sh  run_eval_manual_post-ec.sh  run_eval_robustness.sh  run_eval_robustness_manual.sh  validate_eval_files.ipynb
Scripts/Segmentation/: run_segmentation.sh  run_segmentation_robustness.sh
Scripts/others/: run_U-2-Net.sh  run_edgeDetection.sh
datasets/Sky/: README.md
evaluation/: Makefile  README.md  main.cpp
evaluation/include/: Eval.h  Image.h  PrioQueue.h  Utils.h  ift.h
evaluation/src/: Color.c  Eval.c  Image.c  PrioQueue.c  Utils.c  ift.c
methods/AINET/: Instructions.md  Makefile  README.md  ainet.py  run_demo.py  run_infer_nyu.py
methods/CRS/: CMakeLists.txt
methods/DAL-HERS/: DAL-HERS.py  Makefile  Pipfile
methods/DISF/: DISF_demo.c  Makefile
methods/DRW/: DRW_demo.m  Makefile  MakeiFile.m  README.md  mexCreateSeed.mexa64  mexDRW.mexa64  mexSeedDRW.mexa64
methods/ERGC/: CMakeLists.txt  Makefile
methods/ERS/: ERS.m  Makefile  make.m
methods/ETPS/: CMakeLists.txt  Makefile  README.txt  config.yml
methods/ETPS/src/: ReadMe.txt  functions.cpp  functions.h  segengine.cpp  segengine.h  spixel.cpp  stdafx.cpp  stdafx.h  structures.cpp  structures.h  tsdeque.h  utils.cpp  utils.h
methods/GMMSP/: GMMSP.m  Makefile
methods/GRID/: Makefile  main.cpp  stb_image.h
methods/IBIS/: .gitignore  CMakeLists.txt  README.md  ibis.cpp  ibis.h  main.cpp  run_test.sh  utils.cpp  utils.h
methods/ISF/: LICENSE.txt  Makefile  README.txt
methods/LNSNet/: LNSNet.py  Makefile  Pipfile
methods/LSC/: LSC.m  LSC_mex.cpp  Makefile  readme.txt
methods/ODISF/: .gitignore  LICENSE  Makefile  README.md
methods/RISF/: Makefile  README.md
methods/RSS/: Makefile  README.md  RSS.cpp  RSS.h  RSSV.cpp  main.cpp
methods/SCALP/: Makefile  README.md  SCALP.cpp
methods/SEEDS/: CMakeLists.txt
methods/SH/: Makefile  Pipfile
methods/SICLE/: .gitignore  LICENSE  Makefile  README.md
methods/SIN/: Makefile  Pipfile  run_SIN.py  sin.py
methods/SLIC/: Makefile  SLIC.m  SLICdemo.m
methods/SNIC/: LICENSE  Makefile  Pipfile  README.md  snic (cópia).py  snic.py
methods/SSFCN/: Pipfile  ssfcn.py
others/U-2-Net/: u2net_test.py
(+317 files in other folders)
